UI alignment fixed

--- a/client/src/Homepage/StudentHomepage.css
+++ b/client/src/Homepage/StudentHomepage.css
@@ -134,8 +134,8 @@
 .subpost-input input{
     width:600px;
     height: 30px;
-    border-width: 0.5px;
     padding: 5px;
+    border: 0.1px solid #cfcfcf;
     border-radius: 20px;
   
 }
